external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_duck_typing_method_invalid.exp
error[E04023]: invalid method call
  ┌─ tests/move_2024/typing/macro_duck_typing_method_invalid.move:4:9
  │
4 │         $x.foo()
  │         ^^^^^^^^
  │         │  │
  │         │  No local 'use fun' alias was found for 'a::m::X.foo', and no function 'foo' was found in the defining module 'a::m'
  │         Invalid method call. No known method 'foo' on type 'a::m::X'

